@@ -2,6 +2,7 @@
 -----
 1. Add icons to global search entries.
 2. When showing 'N Items' in subtitle, adjust for number of headers.
+3. Fix sorting of scrollable list items in 'Interface' settings dialog.
 
 6.1.7
 -----
